--- a/gravyflow/examples/01_environment_setup.ipynb
+++ b/gravyflow/examples/01_environment_setup.ipynb
@@ -5,74 +5,7 @@
    "id": "2fb362f8",
    "metadata": {},
    "source": [
-    "# Notebook 1: Setting up the Environment\n",
-    "\n",
-    "## Instalation\n",
-    "\n",
-    "\n",
-    "### 1. Clone the repository\n",
-    "GravyFlow can be installed by cloning the git repository with: \n",
-    "\n",
-    "`git clone https://github.com/mrknorman/gravyflow --recurse-submodules`\n",
-    "\n",
-    "The `--recurse-submodules` tag ensures that the cuPhenom submodule is also downloaded along with its submodules.\n",
-    "\n",
-    "### 2. Compile cuPhenom\n",
-    "Next, the cuPhenom library must be compiled, navigate to the cuPhenom submodule using:\n",
-    "\n",
-    "`cd gravyflow/cuphenom`\n",
-    "\n",
-    "Then ensure that `nvcc` the CUDA C++ compiler is usable by adding the appropriate value to your PATH variable with:\n",
-    "\n",
-    "`export PATH=/usr/local/cuda/bin${PATH:+:${PATH}}$`\n",
-    "\n",
-    "This may need to be altered if your CUDA install is located at a non default location. Remeber to move back outside of\n",
-    "the cuPhenom directory to continue the install process with:\n",
-    "\n",
-    "`cd -`\n",
-    "\n",
-    "### 3. Install Gravyflow\n",
-    "It is recommended that you install GravyFlow within a fresh conda environment. Note that GravyFlow requires Python=3.10*:\n",
-    "\n",
-    "`conda env create --name gravyflow`\n",
-    "\n",
-    "Which can then be activated with:\n",
-    "\n",
-    "`conda activate gravyflow`\n",
-    "\n",
-    "GravyFlow and all its requirments can then be installed into your current Python environment with:\n",
-    "\n",
-    "`pip install -e gravyflow`\n",
-    "\n",
-    "Be aware that Gravflow is under active development; as such, you might encounter issues. If you encounter problems with the installation , ensure that TensorFlow can detect available GPUs in your environment.\n",
-    "\n",
-    "GravyFlow is a GPU-based module that relies heavily on vectorized GPU functions to accelerate calculations. Many components, primarily cuPhenom, do not have a CPU alternative.\n",
-    "\n",
-    "### 4. Setup permissions:\n",
-    "\n",
-    "Follow this guide: \n",
-    "\n",
-    "https://computing.docs.ligo.org/guide/auth/x509/\n",
-    "\n",
-    "Then this guide:\n",
-    "\n",
-    "https://computing.docs.ligo.org/guide/auth/kerberos/\n",
-    "\n",
-    "### 5. Setup Gravity Spy permission:\n",
-    "\n",
-    "Go to https://secrets.ligo.org/secrets/144/ and log in with your LIGO credentials\n",
-    "to get the username and password for Gravity Spy and enter them as follows:\n",
-    "\n",
-    "export GRAVITYSPY_DATABASE_USER=<user>\n",
-    "export GRAVITYSPY_DATABASE_PASSWD=<password>\n",
-    "\n",
-    "### 6. Test Gravyflow (optional)\n",
-    "\n",
-    "Gravyflow uses PyTest to enable testing of its functionality, to test GravyFlow run:\n",
-    "\n",
-    "`pytest gravyflow`\n",
-    "\n",
-    "Note that if you are testing whilst the GPUs are busy, some tests may fail if there is no avalible GPU memory."
+    "# Notebook 1: Setting up the Environment"
    ]
   },
   {
@@ -105,12 +38,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-28 05:30:56.935187: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-02-28 05:30:56.935226: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-02-28 05:30:56.936459: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-02-28 05:30:56.944520: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-02-29 13:45:20.297826: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-02-29 13:45:20.297891: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-02-29 13:45:20.299445: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-02-29 13:45:20.307229: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-02-28 05:30:58.050492: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-02-29 13:45:22.091520: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -120,7 +53,7 @@
     "import os\n",
     "\n",
     "# Importing List from the typing module. Typehints can be used to illustrate to the reader of the\n",
-    "# code the type of variables, in this case, lists\n",
+    "# code the type of variables, in this case, lists.\n",
     "from typing import List\n",
     "\n",
     "# Importing TensorFlow, a powerful library for machine learning and neural networks.\n",
@@ -202,8 +135,8 @@
      "output_type": "stream",
      "text": [
       "INFO:root:TensorFlow version: 2.15.0, CUDA version: 12.2\n",
-      "2024-02-28 05:31:16.134258: W tensorflow/core/common_runtime/gpu/gpu_bfc_allocator.cc:47] Overriding orig_value setting because the TF_FORCE_GPU_ALLOW_GROWTH environment variable is set. Original config value was 0.\n",
-      "2024-02-28 05:31:16.134630: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 2000 MB memory:  -> device: 0, name: Tesla V100-SXM2-16GB, pci bus id: 0000:0b:00.0, compute capability: 7.0\n",
+      "2024-02-29 13:45:42.438165: W tensorflow/core/common_runtime/gpu/gpu_bfc_allocator.cc:47] Overriding orig_value setting because the TF_FORCE_GPU_ALLOW_GROWTH environment variable is set. Original config value was 0.\n",
+      "2024-02-29 13:45:42.438595: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 2000 MB memory:  -> device: 0, name: Tesla V100-SXM2-16GB, pci bus id: 0000:0a:00.0, compute capability: 7.0\n",
       "INFO:root:[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
      ]
     },
@@ -211,7 +144,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CUDA_VISIBLE_DEVICES after environment setup: 3\n",
+      "CUDA_VISIBLE_DEVICES after environment setup: 2\n",
       "GPUs visible to TensorFlow after environment setup: [PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
      ]
     }
@@ -263,7 +196,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CUDA_VISIBLE_DEVICES after environment setup: 4,5. This has changed correctly.\n",
+      "CUDA_VISIBLE_DEVICES after environment setup: 3,4. This has changed correctly.\n",
       "GPUs visible to TensorFlow after environment setup: [PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]. This has not changed.\n"
      ]
     }
