--- a/gravyflow/examples/04_projecting_injections.ipynb
+++ b/gravyflow/examples/04_projecting_injections.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Notebook 4: Projecting Injections\n",
     "\n",
-    "In this notebook we will explore how we can use GravyFlow GPU functions to project injections onto the GPU with physically in a physically realistic fashion."
+    "In this notebook we will explore how we can use GravyFlow GPU functions to project injections onto the GPU with physically in a physically realistic fashion. As ususal we wills start by performing the neccisary imports:"
    ]
   },
   {
@@ -18,12 +18,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-28 08:22:59.710333: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-02-28 08:22:59.710400: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-02-28 08:22:59.711598: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-02-28 08:22:59.719007: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-02-29 13:48:56.014771: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-02-29 13:48:56.014811: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-02-29 13:48:56.016159: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-02-29 13:48:56.024123: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-02-28 08:23:01.038620: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-02-29 13:48:57.770215: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -43,6 +43,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then setting up the GPU environment:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -52,8 +59,8 @@
      "output_type": "stream",
      "text": [
       "INFO:root:TensorFlow version: 2.15.0, CUDA version: 12.2\n",
-      "2024-02-28 08:23:16.370558: W tensorflow/core/common_runtime/gpu/gpu_bfc_allocator.cc:47] Overriding orig_value setting because the TF_FORCE_GPU_ALLOW_GROWTH environment variable is set. Original config value was 0.\n",
-      "2024-02-28 08:23:16.370983: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 2000 MB memory:  -> device: 0, name: Tesla V100-SXM2-16GB, pci bus id: 0000:07:00.0, compute capability: 7.0\n",
+      "2024-02-29 13:49:17.417480: W tensorflow/core/common_runtime/gpu/gpu_bfc_allocator.cc:47] Overriding orig_value setting because the TF_FORCE_GPU_ALLOW_GROWTH environment variable is set. Original config value was 0.\n",
+      "2024-02-29 13:49:17.418078: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 2000 MB memory:  -> device: 0, name: Tesla V100-SXM2-16GB, pci bus id: 0000:07:00.0, compute capability: 7.0\n",
       "INFO:root:[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
      ]
     }
@@ -64,34 +71,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-02-28 08:23:17.278967: I external/local_tsl/tsl/platform/default/subprocess.cc:304] Start cannot spawn child process: No such file or directory\n",
-      "2024-02-28 08:23:18.313162: I external/local_xla/xla/service/service.cc:168] XLA service 0x5570a76af820 initialized for platform CUDA (this does not guarantee that XLA will be used). Devices:\n",
-      "2024-02-28 08:23:18.313189: I external/local_xla/xla/service/service.cc:176]   StreamExecutor device (0): Tesla V100-SXM2-16GB, Compute Capability 7.0\n",
-      "2024-02-28 08:23:18.350881: I external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:454] Loaded cuDNN version 8904\n",
-      "WARNING: All log messages before absl::InitializeLog() is called are written to STDERR\n",
-      "I0000 00:00:1709137398.368725  241088 device_compiler.h:186] Compiled cluster using XLA!  This line is logged at most once for the lifetime of the process.\n"
-     ]
-    }
-   ],
    "source": [
+    "In order to demonstrate projection onto a detector network, we will need example waveforms. We can use the cuPhenomGenerator we learned about in notebook 3 to generate example waveforms:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a waveform generator to generate example IMRPhenomD waveforms:\n",
     "phenom_d_generator : gf.WaveformGenerator = gf.cuPhenomDGenerator(\n",
     "    mass_1_msun=50.0,\n",
     "    mass_2_msun=50.0,\n",
     "    inclination_radians=0.0\n",
     ")\n",
-    "\n",
     "phenom_d_injection_generator : gf.InjectionGenerator = gf.InjectionGenerator(phenom_d_generator)\n",
     "\n",
     "# Use the TensorFlow environment 'env' created earlier with gf.env()\n",
     "with env:\n",
+    "\n",
+    "    # Generate one exammple waveform with the generator:\n",
     "    phenom_d_injection, _, _ = next(phenom_d_injection_generator(num_examples_per_batch=1))"
    ]
   },
@@ -99,7 +102,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Projecting Injections onto Multiple Detectors"
+    "## Projecting Injections onto Multiple Detectors\n",
+    "\n",
+    "GravyFlow uses the `gf.Network class` to handle networks of virtual gravitational wave detectors.\n",
+    "\n",
+    "`gf.Network` has the following intilisation parameters:\n",
+    "\n"
    ]
   },
   {
@@ -111,7 +119,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-28 08:23:18.865580: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:269] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n"
+      "2024-02-29 13:49:20.247165: I tensorflow/compiler/mlir/tensorflow/utils/dump_mlir_util.cc:269] disabling MLIR crash reproducer, set env var `MLIR_CRASH_REPRODUCER_DIRECTORY` to enable.\n"
      ]
     }
    ],
@@ -121,14 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-28 08:23:32.155294: I external/local_xla/xla/stream_executor/gpu/asm_compiler.cc:326] ptxas warning : Registers are spilled to local memory in function 'fusion', 4 bytes spill stores, 4 bytes spill loads\n",
+      "2024-02-29 15:49:18.371369: I external/local_xla/xla/stream_executor/gpu/asm_compiler.cc:326] ptxas warning : Registers are spilled to local memory in function 'fusion', 4 bytes spill stores, 4 bytes spill loads\n",
       "ptxas warning : Registers are spilled to local memory in function 'fusion_1', 16 bytes spill stores, 12 bytes spill loads\n",
       "\n"
      ]
@@ -146,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
