--- a/example_notebooks/00_gravyflow_installation.ipynb
+++ b/example_notebooks/00_gravyflow_installation.ipynb
@@ -32,7 +32,8 @@
     "Adjust the path if your CUDA installation is in a non-default location. Compile cuPhenom by running:\n",
     "```bash\n",
     "make shared\n",
-    "```Afterward, return to the previous directory to continue the installation process:\n",
+    "```\n",
+    "Afterward, return to the previous directory to continue the installation process:\n",
     "\n",
     "```bash\n",
     "cd -\n",
