--- a/example_notebooks/00_gravyflow_installation.ipynb
+++ b/example_notebooks/00_gravyflow_installation.ipynb
@@ -26,7 +26,7 @@
     "Ensure the CUDA C++ compiler (`nvcc`) and associated CUDA libraries are accessible by updating your PATH variable:\n",
     "\n",
     "```bash\n",
-    "export LD_LIBRARY_PATH=/usr/local/cuda/lib64${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}\n"
+    "export LD_LIBRARY_PATH=/usr/local/cuda/lib64${LD_LIBRARY_PATH:+:${LD_LIBRARY_PATH}}\n",
     "export PATH=/usr/local/cuda/bin${PATH:+:${PATH}}$\n",
     "```\n",
     "\n",
