--- a/example_notebooks/00_gravyflow_installation.ipynb
+++ b/example_notebooks/00_gravyflow_installation.ipynb
@@ -48,6 +48,11 @@
     "conda activate gravyflow\n",
     "```\n",
     "\n",
+    "Next, ensure pip is installed by running:\n",
+    "```bash\n",
+    "conda install pip\n",
+    "```\n",
+    "\n",
     "Then, install GravyFlow and its requirements into your conda environment:\n",
     "\n",
     "```bash\n",
