--- a/example_notebooks/01_environment_setup.ipynb
+++ b/example_notebooks/01_environment_setup.ipynb
@@ -38,12 +38,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-29 13:45:20.297826: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-02-29 13:45:20.297891: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-02-29 13:45:20.299445: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-02-29 13:45:20.307229: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-06-11 06:55:12.265260: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-02-29 13:45:22.091520: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-06-11 06:55:13.468062: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -74,9 +71,37 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "5009f105",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lrwxrwxrwx 1 root root 23 Feb 27 17:07 /usr/local/cuda/lib64/libcurand.so.10 -> libcurand.so.10.3.5.119\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls -l /usr/local/cuda/lib64/libcurand.so.10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "feccc33f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LD_LIBRARY_PATH: None\n",
+      "PATH: /home/michael.norman/.conda/envs/gravyflow/bin:/home/michael.norman/.vscode-server/cli/servers/Stable-89de5a8d4d6205e5b11647eb6a74844ca23d2573/server/bin/remote-cli:/cvmfs/software.igwn.org/conda/envs/igwn-py310-20240606/epics/bin/linux-x86_64:/usr/share/Modules/bin:/cvmfs/software.igwn.org/conda/envs/igwn-py310-20240606/epics/bin/linux-x86_64:/home/michael.norman/.conda/envs/gravyflow/bin:/cvmfs/software.igwn.org/conda/condabin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/ldcg/matlab_r2020b/bin:/opt/dcs/bin:/opt/puppetlabs/bin:/home/michael.norman/bin:/ldcg/matlab_r2020b/bin:/opt/dcs/bin:/home/michael.norman/bin\n",
+      "LD_PRELOAD: None\n"
+     ]
+    }
+   ],
    "source": [
     "# Import the GravyFlow module and rename it as 'gf' for ease of use in the code.\n",
     "import gravyflow as gf"
@@ -126,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "db7298c7",
    "metadata": {},
    "outputs": [
@@ -134,18 +159,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:TensorFlow version: 2.15.0, CUDA version: 12.2\n",
-      "2024-02-29 13:45:42.438165: W tensorflow/core/common_runtime/gpu/gpu_bfc_allocator.cc:47] Overriding orig_value setting because the TF_FORCE_GPU_ALLOW_GROWTH environment variable is set. Original config value was 0.\n",
-      "2024-02-29 13:45:42.438595: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 2000 MB memory:  -> device: 0, name: Tesla V100-SXM2-16GB, pci bus id: 0000:0a:00.0, compute capability: 7.0\n",
-      "INFO:root:[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
+      "INFO:root:TensorFlow version: 2.16.1, CUDA version: 12.3\n",
+      "2024-06-11 06:55:21.252771: E external/local_xla/xla/stream_executor/cuda/cuda_driver.cc:282] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n",
+      "2024-06-11 06:55:21.252821: I external/local_xla/xla/stream_executor/cuda/cuda_diagnostics.cc:134] retrieving CUDA diagnostic information for host: ldas-pcdev12\n",
+      "2024-06-11 06:55:21.252832: I external/local_xla/xla/stream_executor/cuda/cuda_diagnostics.cc:141] hostname: ldas-pcdev12\n",
+      "2024-06-11 06:55:21.252982: I external/local_xla/xla/stream_executor/cuda/cuda_diagnostics.cc:165] libcuda reported version is: 550.54.15\n",
+      "2024-06-11 06:55:21.253010: I external/local_xla/xla/stream_executor/cuda/cuda_diagnostics.cc:169] kernel reported version is: 550.54.15\n",
+      "2024-06-11 06:55:21.253019: I external/local_xla/xla/stream_executor/cuda/cuda_diagnostics.cc:248] kernel version seems to match DSO: 550.54.15\n",
+      "INFO:root:[]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CUDA_VISIBLE_DEVICES after environment setup: 2\n",
-      "GPUs visible to TensorFlow after environment setup: [PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
+      "CUDA_VISIBLE_DEVICES after environment setup: \n",
+      "GPUs visible to TensorFlow after environment setup: []\n"
      ]
     }
    ],
@@ -180,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "ccbe5cb1",
    "metadata": {},
    "outputs": [
@@ -188,16 +217,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:TensorFlow version: 2.15.0, CUDA version: 12.2\n",
-      "INFO:root:[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
+      "INFO:root:TensorFlow version: 2.16.1, CUDA version: 12.3\n",
+      "INFO:root:[]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CUDA_VISIBLE_DEVICES after environment setup: 3,4. This has changed correctly.\n",
-      "GPUs visible to TensorFlow after environment setup: [PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]. This has not changed.\n"
+      "CUDA_VISIBLE_DEVICES after environment setup: . This has changed correctly.\n",
+      "GPUs visible to TensorFlow after environment setup: []. This has not changed.\n"
      ]
     }
    ],
@@ -244,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.3"
   },
   "vscode": {
    "interpreter": {
