--- a/example_notebooks/01_environment_setup.ipynb
+++ b/example_notebooks/01_environment_setup.ipynb
@@ -38,9 +38,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-11 06:55:12.265260: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-06-11 07:10:43.132598: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-06-11 06:55:13.468062: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-06-11 07:10:44.875872: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -71,37 +71,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5009f105",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "lrwxrwxrwx 1 root root 23 Feb 27 17:07 /usr/local/cuda/lib64/libcurand.so.10 -> libcurand.so.10.3.5.119\n"
-     ]
-    }
-   ],
-   "source": [
-    "!ls -l /usr/local/cuda/lib64/libcurand.so.10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "feccc33f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LD_LIBRARY_PATH: None\n",
-      "PATH: /home/michael.norman/.conda/envs/gravyflow/bin:/home/michael.norman/.vscode-server/cli/servers/Stable-89de5a8d4d6205e5b11647eb6a74844ca23d2573/server/bin/remote-cli:/cvmfs/software.igwn.org/conda/envs/igwn-py310-20240606/epics/bin/linux-x86_64:/usr/share/Modules/bin:/cvmfs/software.igwn.org/conda/envs/igwn-py310-20240606/epics/bin/linux-x86_64:/home/michael.norman/.conda/envs/gravyflow/bin:/cvmfs/software.igwn.org/conda/condabin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/ldcg/matlab_r2020b/bin:/opt/dcs/bin:/opt/puppetlabs/bin:/home/michael.norman/bin:/ldcg/matlab_r2020b/bin:/opt/dcs/bin:/home/michael.norman/bin\n",
-      "LD_PRELOAD: None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the GravyFlow module and rename it as 'gf' for ease of use in the code.\n",
     "import gravyflow as gf"
@@ -151,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "db7298c7",
    "metadata": {},
    "outputs": [
@@ -160,12 +132,8 @@
      "output_type": "stream",
      "text": [
       "INFO:root:TensorFlow version: 2.16.1, CUDA version: 12.3\n",
-      "2024-06-11 06:55:21.252771: E external/local_xla/xla/stream_executor/cuda/cuda_driver.cc:282] failed call to cuInit: CUDA_ERROR_NO_DEVICE: no CUDA-capable device is detected\n",
-      "2024-06-11 06:55:21.252821: I external/local_xla/xla/stream_executor/cuda/cuda_diagnostics.cc:134] retrieving CUDA diagnostic information for host: ldas-pcdev12\n",
-      "2024-06-11 06:55:21.252832: I external/local_xla/xla/stream_executor/cuda/cuda_diagnostics.cc:141] hostname: ldas-pcdev12\n",
-      "2024-06-11 06:55:21.252982: I external/local_xla/xla/stream_executor/cuda/cuda_diagnostics.cc:165] libcuda reported version is: 550.54.15\n",
-      "2024-06-11 06:55:21.253010: I external/local_xla/xla/stream_executor/cuda/cuda_diagnostics.cc:169] kernel reported version is: 550.54.15\n",
-      "2024-06-11 06:55:21.253019: I external/local_xla/xla/stream_executor/cuda/cuda_diagnostics.cc:248] kernel version seems to match DSO: 550.54.15\n",
+      "2024-06-11 07:10:53.338565: W tensorflow/core/common_runtime/gpu/gpu_device.cc:2251] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "Skipping registering GPU devices...\n",
       "INFO:root:[]\n"
      ]
     },
@@ -173,7 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CUDA_VISIBLE_DEVICES after environment setup: \n",
+      "CUDA_VISIBLE_DEVICES after environment setup: 0\n",
       "GPUs visible to TensorFlow after environment setup: []\n"
      ]
     }
@@ -209,24 +177,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "ccbe5cb1",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:root:TensorFlow version: 2.16.1, CUDA version: 12.3\n",
-      "INFO:root:[]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CUDA_VISIBLE_DEVICES after environment setup: . This has changed correctly.\n",
-      "GPUs visible to TensorFlow after environment setup: []. This has not changed.\n"
+     "ename": "Exception",
+     "evalue": "No GPUs avalible as they were too busy or not existant.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Attempt to run gf.env again, this time requesting 2 GPUs, without restarting the kernel.\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m env : tf\u001b[38;5;241m.\u001b[39mdistribute\u001b[38;5;241m.\u001b[39mStrategy \u001b[38;5;241m=\u001b[39m \u001b[43mgf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menv\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnum_gpus_to_request\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# gf.env will prevent the creation of a new scope, as TensorFlow does not allow this,\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# and will return the same environment that was set up initially.\u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m env:\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;66;03m# Fetching and printing the CUDA_VISIBLE_DEVICES environment variable.\u001b[39;00m\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;66;03m# This check is to see if the environment variable has changed.\u001b[39;00m\n",
+      "File \u001b[0;32m~/gravyflow/gravyflow/src/utils/gpu.py:260\u001b[0m, in \u001b[0;36menv\u001b[0;34m(min_gpu_memory_mb, max_gpu_utilization_percentage, num_gpus_to_request, memory_to_allocate_tf, gpus)\u001b[0m\n\u001b[1;32m    253\u001b[0m     gpus \u001b[38;5;241m=\u001b[39m find_available_GPUs(\n\u001b[1;32m    254\u001b[0m         min_memory_MB\u001b[38;5;241m=\u001b[39mmin_gpu_memory_mb, \n\u001b[1;32m    255\u001b[0m         max_utilization_percentage\u001b[38;5;241m=\u001b[39mmax_gpu_utilization_percentage,\n\u001b[1;32m    256\u001b[0m         max_needed\u001b[38;5;241m=\u001b[39mnum_gpus_to_request\n\u001b[1;32m    257\u001b[0m     )\n\u001b[1;32m    259\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m gpus:\n\u001b[0;32m--> 260\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo GPUs avalible as they were too busy or not existant.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    261\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(gpus) \u001b[38;5;241m!=\u001b[39m num_gpus_to_request:\n\u001b[1;32m    262\u001b[0m     logging\u001b[38;5;241m.\u001b[39mwarning(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCould not allocate requested number of GPUs (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnum_gpus_to_request\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m) as they were too busy or not existant. Allocated \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mlen\u001b[39m(gpus)\u001b[38;5;250m \u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m instead.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mException\u001b[0m: No GPUs avalible as they were too busy or not existant."
      ]
     }
    ],
