--- a/example_notebooks/00_gravyflow_installation.ipynb
+++ b/example_notebooks/00_gravyflow_installation.ipynb
@@ -20,7 +20,7 @@
     "To compile the cuPhenom library, navigate to the cuPhenom submodule directory:\n",
     "\n",
     "```bash\n",
-    "cd gravyflow/cuphenom\n",
+    "cd gravyflow/gravyflow/cuphenom\n",
     "```\n",
     "\n",
     "Ensure the CUDA C++ compiler (`nvcc`) and associated CUDA libraries are accessible by updating your PATH variable:\n",
@@ -44,7 +44,7 @@
     "It is recommended to install GravyFlow within a new conda environment. GravyFlow requires Python 3.10:\n",
     "\n",
     "```bash\n",
-    "conda env create --name gravyflow\n",
+    "conda create --name gravyflow\n",
     "conda activate gravyflow\n",
     "```\n",
     "\n",
